--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,11 +75,12 @@ jobs:
               pwd && \
               ls && \
               
-              wget -qO- https://deb.opera.com/archive.key | apt-key add - && \
-              add-apt-repository "deb [arch=arm64] https://deb.opera.com/opera-stable/ stable non-free" && \
-              apt-get update && \
-              apt-get -y --no-install-recommends install opera-stable chromium-browser && \
-              opera --version && \
+              apt install opera-stable
+              export DISPLAY=:99.0
+              sh -e /etc/init.d/xvfb start
+              "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile--background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+              apt-get -y --no-install-recommends install opera-stable
+              opera --version
               
               python -m pip install -U pip wheel && \
               pip install pipenv && \
@@ -87,3 +88,10 @@ jobs:
               
               pipenv run py.test -sv --cov-config .coveragerc --cov-report xml --cov-report term:skip-covered --cov=webdriver_manager --tb=short tests/ && \
               deactivate'
+
+#              wget -qO- https://deb.opera.com/archive.key | apt-key add - && \
+#              add-apt-repository "deb [arch=arm64] https://deb.opera.com/opera-stable/ stable non-free" && \
+#              apt-get update && \
+#              apt-get -y --no-install-recommends install opera-stable chromium-browser && \
+#              opera --version && \
+              sudo apt-get update -y
