--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,9 +76,10 @@ jobs:
               pwd && \
               ls && \
               
-              apt install snapd && \
-              snap install opera && \
-              
+              wget -qO- https://deb.opera.com/archive.key |  apt-key add - && \
+              add-apt-repository 'deb https://deb.opera.com/opera-stable/ stable non-free' && \
+              apt-get update && \
+              apt-get -y --no-install-recommends install opera-stable chromium-browser && \
 
               opera --version && \
 
@@ -90,10 +91,8 @@ jobs:
               pipenv run py.test -sv --cov-config .coveragerc --cov-report xml --cov-report term:skip-covered --cov=webdriver_manager --tb=short tests/ && \
               deactivate'
               
-#             wget -qO- https://deb.opera.com/archive.key |  apt-key add - && \
-#              add-apt-repository 'deb https://deb.opera.com/opera-stable/ stable non-free' && \
-#              apt-get update && \
-#              apt-get -y --no-install-recommends install opera-stable chromium-browser && \
+#              apt install snapd && \
+#              snap install opera && \
               
 #              apt install opera-stable
 #              export DISPLAY=:99.0
