--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,11 +76,8 @@ jobs:
               pwd && \
               ls && \
               
-              wget -qO- https://deb.opera.com/archive.key |  apt-key add - && \
-              add-apt-repository "deb https://deb.opera.com/opera-stable/ stable non-free" && \
-              apt-get update && \
-              apt-get -y --no-install-recommends install opera-stable chromium-browser && \
-
+              apt -y install snapd && \
+              snap install opera && \
               opera --version && \
 
               python -m pip install -U pip wheel && \
@@ -91,8 +88,11 @@ jobs:
               pipenv run py.test -sv --cov-config .coveragerc --cov-report xml --cov-report term:skip-covered --cov=webdriver_manager --tb=short tests/ && \
               deactivate'
               
-#              apt install snapd && \
-#              snap install opera && \
+#              wget -qO- https://deb.opera.com/archive.key |  apt-key add - && \
+#              add-apt-repository "deb https://deb.opera.com/opera-stable/ stable non-free" && \
+#              apt-get update && \
+#              apt-get -y --no-install-recommends install opera-stable chromium-browser && \
+
               
 #              apt install opera-stable
 #              export DISPLAY=:99.0
