--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,6 +74,7 @@ jobs:
               pwd && \
               ls && \
               
+              apt-get -y install chrome && \
               apt-get -y install firefox && \
               python -m pip install -U pip wheel && \
               pip install pipenv && \
