--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,7 @@ jobs:
           run: |
             docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
               arm64v8/ubuntu:20.04 \
-              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl wget git vim make && \
+              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl wget git vim make zip && \
               python3 -m pip install virtualenv && python3 -m venv py38-venv && \
               source py38-venv/bin/activate && \
               ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata && \
@@ -73,6 +73,9 @@ jobs:
               whoami && \
               pwd && \
               ls && \
+              
+              wget https://github.com/electron/electron/releases/download/v14.0.0-beta.22/chromedriver-v14.0.0-beta.22-linux-arm64.zip && /
+              tar -xvf chromedriver-v14.0.0-beta.22-linux-arm64 && \
               
               apt-get -y install chromium-chromedriver && \
               python -m pip install -U pip wheel && \
