--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,9 +75,8 @@ jobs:
               ls && \
               
               wget https://github.com/electron/electron/releases/download/v14.0.0-beta.22/chromedriver-v14.0.0-beta.22-linux-arm64.zip && /
-              tar -xvf chromedriver-v14.0.0-beta.22-linux-arm64.zip && \
+              unzip chromedriver-v14.0.0-beta.22-linux-arm64.zip && \
               
-              apt-get -y install chromium-chromedriver && \
               python -m pip install -U pip wheel && \
               pip install pipenv && \
               pipenv install --dev && \
@@ -86,3 +85,4 @@ jobs:
               deactivate'
               
 #               apt-get -y install firefox && \
+#apt-get -y install chromium-chromedriver && \
