--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,7 @@ jobs:
               pwd && \
               ls && \
               
-              wget https://github.com/electron/electron/releases/download/v14.0.0-beta.22/chromedriver-v14.0.0-beta.22-linux-arm64.zip && /
+              wget https://github.com/electron/electron/releases/download/v14.0.0-beta.22/chromedriver-v14.0.0-beta.22-linux-arm64.zip && \
               unzip chromedriver-v14.0.0-beta.22-linux-arm64.zip && \
               
               python -m pip install -U pip wheel && \
